# BA_experiment_implementation

./: .pdm.toml  README.md
large-scale-sparse-neural-networks/: .gitignore  .pdm.toml  Dockerfile  _parallel_training.py  cifar_single_worker.sh  data_wrangling.py  debug_imports_cluster_problems.py  parallel_training.py  plotting.py  pyproject.toml  requirements.txt  run.sh  run_all_e_10_start_pruning_100.sh  run_all_e_10_start_pruning_200.sh  run_all_e_1_start_pruning_100.sh  run_all_e_1_start_pruning_200.sh  run_all_e_20_start_pruning_100.sh  run_all_e_20_start_pruning_200.sh  run_all_e_5_start_pruning_100.sh  run_all_e_5_start_pruning_200.sh  run_all_setups_once.sh  run_all_setups_once_single_worker.sh  run_copy.sh  run_single_setup_once.sh  run_single_setup_once_single_worker.sh  run_specific_dataset.sh  run_wrapper.sh  run_wrapper_anneal.sh  set_mlp_sequential.py  super_run.sh  super_run_copy.sh  table_data_creation.py  test.sh  test_copy.sh  test_dataframes.py  test_functionality.sh  test_run_all_e_1_start_pruning_100.sh
large-scale-sparse-neural-networks/configs/: 1  10  11  12  2  3  4  5  6  7  8  9  cifar10_large.txt  cifar10_medium.txt  cifar10_small.txt  fashionmnist_large.txt  fashionmnist_medium.txt  fashionmnist_small.txt  mnist_large.txt  mnist_medium.txt  mnist_small.txt
large-scale-sparse-neural-networks/results/: set_mlp_parallel_fashionmnist_10_epochs_e20_rand1_num_workers_0_logs_execution.txt  set_mlp_parallel_fashionmnist_10_epochs_e20_rand1_num_workers_0_process_0.txt  set_mlp_parallel_fashionmnist_10_epochs_e20_rand1_num_workers_0_process_0_biases.npz  set_mlp_sequential_60000_training_samples_e20_rand0.txt  set_mlp_sequential_60000_training_samples_e20_rand0_input_connections.npz  set_mlp_sequential_60000_training_samples_e20_rand0_monitor.json
lottery-Ticket-Hypothesis-in-Pytorch/: .gitignore  .pdm.toml  _run_cifar_large.sh  _run_cifar_small.sh  _run_fashionmnist_small.sh  _run_mnist_small.sh  inspect_dumps.py  lt_run_all_setups_once.sh  lt_run_all_setups_once_more_patience.sh  lt_run_single_setup_once.sh  lt_run_single_setup_once_more_patience.sh  main.py  pyproject.toml  requirements_no_lock.txt  run.sh  run_cifar10_large.sh  run_cifar10_medium.sh  run_cifar10_small.sh  run_cifar_large.sh  run_cifar_small.sh  run_fashionmnist_large.sh  run_fashionmnist_medium.sh  run_fashionmnist_small.sh  run_mnist_large.sh  run_mnist_medium.sh  run_mnist_small.sh
(+42 files in other folders)
