[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = "jan.kettler99@gmail.com"},
]
dependencies = [
    "Keras",
    "Keras-Preprocessing",
    "llvmlite",
    "matplotlib",
    "mpi4py",
    "numba",
    "numpy",
    "pandas",
    "python-dateutil",
    "scikit-learn",
    "scipy",
    "tensorflow",
    "psutil>=5.9.4",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
