[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = ["Keras", "Keras-Preprocessing", "llvmlite", "matplotlib", "mpi4py", "numba", "numpy", "pandas", "python-dateutil", "scikit-learn", "scipy", "tensorflow", "psutil"]
requires-python = ">=3.7"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
