[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jan Kettler", email = "jan.kettler99@gmail.com"},
]
dependencies = [
    "numpy>=1.24.2",
    "cycler==0.10.0",
    "kiwisolver==1.1.0",
    "matplotlib==3.1.1",
    "numpy==1.17.2",
    "pandas==0.25.1",
    "Pillow==6.2.0",
    "protobuf==3.9.2",
    "pyparsing==2.4.2",
    "python-dateutil==2.8.0",
    "pytz==2019.2",
    "scipy==1.3.1",
    "seaborn==0.9.0",
    "six==1.12.0",
    "tensorboardX==1.8",
    "torch==1.2.0",
    "torchvision==0.4.0",
    "tqdm==4.36.1",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
